# tdc-gpx2_software

./: .gitignore  README.md
gpx2/: CMakeLists.txt
gpx2-raspi/: CMakeLists.txt
gpx2-raspi/include/: gpx2.h
gpx2-raspi/src/: gpx2.cpp
gpx2/gpx2-raspi-lib/: CMakeLists.txt
gpx2/gpx2-raspi-lib/config/: changelog  license
gpx2/gpx2-raspi-lib/doxygen/: Doxyfile.in
gpx2/gpx2-raspi-lib/include/: config.h  gpx2.h  version.h
gpx2/gpx2-raspi-lib/src/: config.cpp  gpx2.cpp
gpx2/gpx2-raspi-pigpiod-lib-deprecated/: CMakeLists.txt
gpx2/gpx2-raspi-pigpiod-lib-deprecated/doxygen/: Doxyfile.in
gpx2/gpx2-raspi-pigpiod-lib-deprecated/include/: version.h
gpx2/gpx2-raspi-readout-program/: CMakeLists.txt
gpx2/gpx2-raspi-readout-program/include/: version.h
gpx2/gpx2-raspi-readout-program/src/: main.cpp
gpx2/spi/: CMakeLists.txt
gpx2/spi/config/: changelog  copyright  version.h
gpx2/spi/doxygen/: Doxyfile.in
gpx2/spi/include/spidevices/: spidevice.h
gpx2/spi/include/spidevices/gpx2/: config.h  gpx2.h
gpx2/spi/src/: spi.c
gpx2/spi/src/spidevices/: spidevice.cpp
gpx2/spi/src/spidevices/gpx2/: config.cpp  gpx2.cpp
source/: CMakeLists.txt
source/gpx2-raspi-pigpiod-lib-deprecated/: README.md
source/gpx2-raspi-pigpiod-lib-deprecated/config/: version.h
source/gpx2-raspi-pigpiod-lib-deprecated/include/: config.h
source/gpx2-raspi-pigpiod-lib-deprecated/src/: config.cpp
source/gpx2-raspi-readout-program/: CMakeLists.txt
source/gpx2-raspi-readout-program/config/: version.h
source/gpx2-raspi-readout-program/include/: gpio.h  gpiodhandler.h  queue.h  readout.h
source/gpx2-raspi-readout-program/src/: gpio.cpp  gpiodhandler.cpp  main.cpp  readout.cpp
source/spi/: CMakeLists.txt  spidevices.h
source/spi/include/: version.h
source/spi/include/spidevices/: spidevice.h
source/spi/include/spidevices/gpx2/: config.h  gpx2.h
source/spi/src/spidevices/: spidevice.cpp
source/spi/src/spidevices/gpx2/: config.cpp  gpx2.cpp
